[d2bbad7806bc0480a7b1da403a73a5c160b16e90]: Merge pull request #196 from DeveloperCielo/tsaitobraspag-patch-129
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -3616,6 +3616,12 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Sim</td>
       <td><em>Não</em></td>
     </tr>
+    <tr>
+      <td>Hiper</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td><em>Não</em></td>
+    </tr>
   </tbody>
 </table>
 
@@ -4187,7 +4193,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto</td>
       <td>10</td>
       <td>Não</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
   </tbody>
 </table>
@@ -5141,7 +5147,7 @@ Essa <strong>não é uma permissão concedida pela cielo</strong>, o lojista dev
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
   </tbody>
 </table>
@@ -6967,7 +6973,7 @@ Este processo de autenticação pode ser feito junto ou separado da autorizaçã
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
   </tbody>
 </table>
@@ -7700,7 +7706,7 @@ Existem 3 tipos de configurações de analise de fraude disponiveis:</p>
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.SaveCard</code></td>
@@ -12755,7 +12761,7 @@ Dessa forma, quando uma transação com marcação de recorrente for submetida p
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
   </tbody>
 </table>
@@ -14514,7 +14520,7 @@ Cada Wallet possui um formato de <code class="highlighter-rouge">EphemeralPublic
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -14842,7 +14848,7 @@ Cada Wallet possui um formato de <code class="highlighter-rouge">EphemeralPublic
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -15218,7 +15224,7 @@ VKeU<br />
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -15557,7 +15563,7 @@ VKeU<br />
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard /  Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -15911,7 +15917,7 @@ VKeU<br />
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -16122,7 +16128,7 @@ VKeU<br />
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -16431,7 +16437,7 @@ VKeU<br />
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -16810,7 +16816,7 @@ aWvYpwra9kiVLR3742JWgF7P25rCdpwzXO9KiD9T8VxYnEZeFli+LQXb7c6UJjHl<br />
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -17146,7 +17152,7 @@ aWvYpwra9kiVLR3742JWgF7P25rCdpwzXO9KiD9T8VxYnEZeFli+LQXb7c6UJjHl<br />
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
