[83053dcbf87b0d7d0468eed0785be8785eb6dbdb]: Merge pull request #197 from DeveloperCielo/tsaitobraspag-patch-130
Update 2003-03-03-cielo-ecommerce.md

--- a/en/manual/cielo-ecommerce.html
+++ b/en/manual/cielo-ecommerce.html
@@ -394,6 +394,13 @@
       <td><em>No</em></td>
       <td><em>No</em></td>
     </tr>
+    <tr>
+      <td>Hiper</td>
+      <td>Yes</td>
+      <td>Yes</td>
+      <td><em>No</em></td>
+      <td><em>No</em></td>
+    </tr>
   </tbody>
 </table>
 
@@ -945,7 +952,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
@@ -1572,7 +1579,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
@@ -2015,7 +2022,7 @@ Below we specify any existing differences:</p>
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
@@ -3578,6 +3585,12 @@ Below we specify any existing differences:</p>
       <td>Yes</td>
       <td><em>No</em></td>
     </tr>
+    <tr>
+      <td>Hiper</td>
+      <td>Yes</td>
+      <td>Yes</td>
+      <td><em>No</em></td>
+    </tr>
   </tbody>
 </table>
 
@@ -4146,7 +4159,7 @@ Below we specify any existing differences:</p>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.Brand</code></td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
       <td>Text</td>
       <td>10</td>
       <td>No</td>
@@ -5112,7 +5125,7 @@ PaymentIds associated with the identifier.</p>
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
   </tbody>
 </table>
@@ -6844,7 +6857,7 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
   </tbody>
 </table>
@@ -7582,7 +7595,7 @@ It is possible to carry out both the total cancellation and the partial cancella
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.SaveCard</code></td>
@@ -12633,7 +12646,7 @@ That way, when a transaction with recurrent markup is submitted to the API and C
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
   </tbody>
 </table>
@@ -14390,7 +14403,7 @@ Each Wallet has an <code class="highlighter-rouge">EphemeralPublicKey</code> for
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -14718,7 +14731,7 @@ Each Wallet has an <code class="highlighter-rouge">EphemeralPublicKey</code> for
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -15091,7 +15104,7 @@ VKeU<br />
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -15430,7 +15443,7 @@ VKeU<br />
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -16191,7 +16204,7 @@ VKeU<br />
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card issuer (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.SecurityCode</code></td>
@@ -16955,7 +16968,7 @@ aWvYpwra9kiVLR3742JWgF7P25rCdpwzXO9KiD9T8VxYnEZeFli+LQXb7c6UJjHl<br />
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
@@ -17291,7 +17304,7 @@ aWvYpwra9kiVLR3742JWgF7P25rCdpwzXO9KiD9T8VxYnEZeFli+LQXb7c6UJjHl<br />
       <td>Text</td>
       <td>10</td>
       <td>Yes</td>
-      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Card brand (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">Wallet.Type</code></td>
