[d63176104a7e2bd07dd6e8192b92c590843de95c]: Merge pull request #198 from DeveloperCielo/tsaitobraspag-patch-131
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -404,6 +404,14 @@
       <td><em>Não</em></td>
       <td><em>Não</em></td>
     </tr>
+    <tr>
+      <td>Hiper</td>
+      <td>Sim</td>
+      <td>Sim</td>
+      <td><em>Não</em></td>
+      <td><em>Não</em></td>
+      <td><em>Não</em></td>
+    </tr>
   </tbody>
 </table>
 
@@ -952,7 +960,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
@@ -1579,7 +1587,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
@@ -2022,7 +2030,7 @@ Abaixo especificamos qualquer diferença existente:</p>
       <td>Texto</td>
       <td>10</td>
       <td>Sim</td>
-      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard).</td>
+      <td>Bandeira do cartão (Visa / Master / Amex / Elo / Aura / JCB / Diners / Discover / Hipercard / Hiper).</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">CreditCard.CardOnFile.Usage</code></td>
