[65f041fba31e92e429baf2eb4bc9865525be00f4]: Update 2017-01-01-cielo-lio.md
embed video da certificação

--- a/manual/cielo-lio.html
+++ b/manual/cielo-lio.html
@@ -3722,6 +3722,7 @@ Ao clicar nela, aparecerá um QR Code. Nesse momento, basta abrir o aplicativo T
   <li>Os conteúdos no aplicativos não violem as regras da Cielo</li>
   <li>Os SKUs dos produtos são enviados corretamente</li>
   <li>Informações para vitrine da Cielo Store estejam preenchidas corretamente, exclusivo para aplicativos públicos</li>
+  <li>Todo aplicativo da loja publica que contenha video URL, deverá ser validado no seguinte formato: “https://www.youtube.com/embed/”</li>
   <li>Gerar valores para teste até R$0,05 centavos</li>
   <li>Não mencionar a palavra Cielo</li>
   <li>Caso o APP tenha webview, não ficar disponível a URL para a troca de URL dentro do APP. A URL não deverá aparecer.</li>
