[ef3d6d976baf6e66e7d1cf41300704b049ad8a38]: Merge pull request #201 from DeveloperCielo/tsaitobraspag-patch-134
Update 2003-03-03-cielo-ecommerce.md

--- a/manual/cielo-ecommerce.html
+++ b/manual/cielo-ecommerce.html
@@ -13816,7 +13816,7 @@ O Submergível pode usar a consulta bins no carrinho para alertar compradores in
       <td><code class="highlighter-rouge">CardType</code></td>
       <td>Texto</td>
       <td>20</td>
-      <td>Tipo do cartão em uso : <br /> Credito <br /> Debito <br />Multiplo</td>
+      <td>Tipo do cartão em uso : <br /> Crédito <br /> Débito <br />Multiplo</td>
     </tr>
     <tr>
       <td><code class="highlighter-rouge">ForeingCard</code></td>
